--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@ body{
     align-items: center;
     flex-direction: column;
     height: 100vh;
+    background-image:linear-gradient(to bottom, #E5E5E5, #da7777);
 }
 button{
-    width: 77px;
-    height: 77px;
+    width: 70px;
+    height: 70px;
     border-radius: 49px;
    color: #ef0044;
    font-size: 20px;
@@ -18,13 +19,13 @@ button{
 .num-div{
    
     display: grid;
-    grid-template-rows: repeat(8, 0fr);
+    grid-template-rows: repeat(5, 0fr);
     grid-template-columns: repeat(4, 0fr);
     margin-top: 5%;
    justify-content: center;
    gap: 9px;
-   padding-left: 15px;
-   padding-right: 15px;
+   padding: 0px 15px 0px 15px;
+   
 }
 .display-box{
     display: flex;
@@ -33,13 +34,14 @@ button{
     justify-content: flex-end;
     Width: 329px;
     Height: 164px;
-    margin-top: 20px;
+    margin-top: 4px;
     background: rgba(223, 223, 223, 0.7);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), inset -2px -1px 4px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(2px);
+    border-radius: 34px;
     
 }
-.calculator{
+.calculator{    
     display: flex;
     flex-direction: column;
     
@@ -48,16 +50,22 @@ button{
     justify-content: space-between;
     border-radius: 36px;
     height: 580px;
+    padding: 16px 5px 15px 5px;
+   
+    filter:drop-shadow(14px 20px 0px rgba(19, 18, 18, 0.25))
+
 }
 #display{
-    width: 200px;
+    width: 260px;
      height: 50px; 
      
-    display: flex;
+     display: flex;
      align-items: center;
      justify-content: flex-end;
-     font-size: 20px;
-     padding: 10px;
+     font-size: 30px;
+     font-weight:100;
+     padding: 0px 21px 5px 0px;
+     overflow: hidden;
 }
 #display2{
     width: 10px;
@@ -68,6 +76,15 @@ button{
     font-size: 20px;
     padding: 10px;
 }
+#zero{
+    width: 150px;
+    
+}
 
-
+.footer{
+    display: flex;
+    width: 300px;
+    gap: 13px;
+ 
+}
 
