--- a/style.css
+++ b/style.css
@@ -1,90 +1,85 @@
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100vh;
-    background-image:linear-gradient(to bottom, #E5E5E5, #da7777);
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  background-image: linear-gradient(to bottom, #e7c5c5, #da6161);
+  font-family: "Poppins", sans-serif;
 }
-button{
-    width: 70px;
-    height: 70px;
-    border-radius: 49px;
-   color: #ef0044;
-   font-size: 20px;
-   font-weight: bolder;
-    filter: drop-shadow(5px 17px 4px rgba(19, 18, 18, 0.25));
-    border: 3px solid #E5E5E5
+button {
+  width: 70px;
+  height: 70px;
+  border-radius: 49px;
+  color: #ef0044;
+  font-size: 20px;
+  font-weight: bolder;
+  filter: drop-shadow(5px 17px 4px rgba(19, 18, 18, 0.25));
+  border: 3px solid #e4d9d9;
 }
-.num-div{
-   
-    display: grid;
-    grid-template-rows: repeat(5, 0fr);
-    grid-template-columns: repeat(4, 0fr);
-    margin-top: 5%;
-   justify-content: center;
-   gap: 9px;
-   padding: 0px 15px 0px 15px;
-   
+.container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 80%;
 }
-.display-box{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: flex-end;
-    Width: 329px;
-    Height: 164px;
-    margin-top: 4px;
-    background: rgba(223, 223, 223, 0.7);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), inset -2px -1px 4px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(2px);
-    border-radius: 34px;
-    
+.num-div {
+  display: grid;
+  grid-template-rows: repeat(5, 0fr);
+  grid-template-columns: repeat(4, 0fr);
+  margin-top: 5%;
+  justify-content: center;
+  gap: 9px;
+  padding: 0px 15px 0px 15px;
 }
-.calculator{    
-    display: flex;
-    flex-direction: column;
-    
-    background-image: linear-gradient(to bottom, #E5E5E5, #d19797);
-    align-items: center;
-    justify-content: space-between;
-    border-radius: 36px;
-    height: 580px;
-    padding: 16px 5px 15px 5px;
-   
-    filter:drop-shadow(14px 20px 0px rgba(19, 18, 18, 0.25))
+.display-box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  width: 329px;
+  height: 164px;
+  margin-top: 4px;
+  background: rgba(223, 223, 223, 0.7);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25),
+    inset -2px -1px 4px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(2px);
+  border-radius: 34px;
+}
+.calculator {
+  display: flex;
+  flex-direction: column;
 
+  background-image: linear-gradient(to bottom, #e5e5e5, #d19797);
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 36px;
+  height: 580px;
+  padding: 16px 5px 15px 5px;
+
+  filter: drop-shadow(14px 20px 0px rgba(19, 18, 18, 0.25));
 }
-#display{
-    width: 260px;
-     height: 50px; 
-     
-     display: flex;
-     align-items: center;
-     justify-content: flex-end;
-     font-size: 30px;
-     font-weight:100;
-     padding: 0px 21px 5px 0px;
-     overflow: hidden;
-}
-#display2{
-    width: 10px;
-    height: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    font-size: 20px;
-    padding: 10px;
-}
-#zero{
-    width: 150px;
-    
+#display {
+  width: 280px;
+  height: 50px;
+  display: flex;
+  align-self: end;
+  justify-content: flex-end;
+  font-size: 30px;
+  font-weight: 100;
+  font-style: italic;
+  padding: 0px 21px 5px 0px;
+  overflow: hidden;
 }
 
-.footer{
-    display: flex;
-    width: 300px;
-    gap: 13px;
- 
+#zero {
+  width: 150px;
 }
-
+.footer {
+  display: flex;
+  width: 300px;
+  gap: 13px;
+}
+button:active {
+  filter: drop-shadow(5px 17px 4px rgba(161, 154, 154, 0.25));
+}
